--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div *ngFor="let user of users;">
-  <span *ngFor="let organization of user.organizations | slice: 0:5">
-      <button class="btn badge pull-left" (click)="organizationClick(organization.id)">
-          {{organization.id}}
-      </button>
-  </span>
-</div>
+<span *ngFor="let organization of user.organizations | slice: 0:5">
+    <button (click)="organizationClick(organization.id)">{{organization.id}}</button>
+</span>
